crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_export_issue.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$ } from "@qwik.dev/core";

const App = component$(() => {
  return <div>hola</div>;
});

export const Root = component$((props: Stuff) => {
  return <App />;
});

const Other = 12;
export { Other as App };

export default App;

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Root_component_XXXXXXXXXXXX");
const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_XXXXXXXXXXXX"),
);
export const Root = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Root_component_XXXXXXXXXXXX"),
);
const Other = 12;
export { Other as App };
export default App;
export { App as _auto_App };

=== test.tsx_App_component_XXXXXXXXXXXX.js === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
export const App_component_XXXXXXXXXXXX = () => {
  return /* @__PURE__ */ _jsxSorted("div", null, null, "hola", 3, "u6_0");
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_Root_component_XXXXXXXXXXXX.js === (ENTRY)
import { _auto_App as App } from "./test";
import { _jsxSorted } from "@qwik.dev/core";
export const Root_component_XXXXXXXXXXXX = (props) => {
  return /* @__PURE__ */ _jsxSorted(App, null, null, null, 3, "u6_1");
};

/*
{
  "origin": "test.tsx",
  "name": "Root_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Root_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Root_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "props"
  ]
}
*/

=== DIAGNOSTICS ===

[]
