crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_exports.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { $, component$ } from "@qwik.dev/core";

export const [
  a,
  {
    b,
    v1: [c],
    d = v2,
    ...e
  },
  f = v3,
  ...g
] = obj;

const exp1 = 1;
const internal = 2;
export { exp1, internal as expr2 };

export function foo() {}
export class bar {}

export default function DefaultFn() {}

export const Header = component$(() => {
  return $(() => (
    <Footer>
      <div>
        {a}
        {b}
        {c}
        {d}
        {e}
        {f}
        {exp1}
        {internal}
        {foo}
        {bar}
        {DefaultFn}
      </div>
      <div>
        {v1}
        {v2}
        {v3}
        {obj}
      </div>
    </Footer>
  ));
});

export const Footer = component$();

=== project/test.jsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Header_component_XXXXXXXXXXXX");
export const [
  a,
  {
    b,
    v1: [c],
    d = v2,
    ...e
  },
  f = v3,
  ...g
] = obj;
const exp1 = 1;
const internal = 2;
export { exp1, internal as expr2 };
export function foo() {}
export class bar {}
export default function DefaultFn() {}
export const Header = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Header_component_XXXXXXXXXXXX"),
);
export const Footer = /* @__PURE__ */ componentQrl();

=== project/test.tsx_Header_component_XXXXXXXXXXXX.jsx === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Header_component_1_XXXXXXXXXXXX");
export const Header_component_XXXXXXXXXXXX = () => {
  return /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Header_component_1_XXXXXXXXXXXX");
};

/*
{
  "origin": "project/test.tsx",
  "name": "Header_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Header_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Header_component_XXXXXXXXXXXX",
  "path": "project",
  "extension": "jsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== project/test.tsx_Header_component_1_XXXXXXXXXXXX.jsx === (ENTRY)
import { default as DefaultFn } from "./test";
import { Footer } from "./test";
import { a } from "./test";
import { b } from "./test";
import { bar } from "./test";
import { c } from "./test";
import { d } from "./test";
import { e } from "./test";
import { exp1 } from "./test";
import { f } from "./test";
import { foo } from "./test";
import { expr2 as internal } from "./test";
export const Header_component_1_XXXXXXXXXXXX = () => (
  <Footer>
    <div>
      {a}
      {b}
      {c}
      {d}
      {e}
      {f}
      {exp1}
      {internal}
      {foo}
      {bar}
      {DefaultFn}
    </div>
    <div>
      {v1}
      {v2}
      {v3}
      {obj}
    </div>
  </Footer>
);

/*
{
  "origin": "project/test.tsx",
  "name": "Header_component_1_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Header_component_1",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Header_component_1_XXXXXXXXXXXX",
  "path": "project",
  "extension": "jsx",
  "parent": "Header_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
