crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_functional_component.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { $, component$, useStore } from "@qwik.dev/core";
const Header = component$(() => {
  const thing = useStore();
  const { foo, bar } = foo();

  return <div>{thing}</div>;
});

=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Header_component_XXXXXXXXXXXX");
import { $, component$, useStore } from "@qwik.dev/core";
const Header = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Header_component_XXXXXXXXXXXX"),
);

=== test.tsx_Header_component_XXXXXXXXXXXX.tsx === (ENTRY)
import { useStore } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Header_component_XXXXXXXXXXXX");
export const Header_component_XXXXXXXXXXXX = () => {
  const thing = useStore();
  const { foo, bar } = foo();
  return <div>{thing}</div>;
};

/*
{
  "origin": "test.tsx",
  "name": "Header_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Header_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Header_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
