crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_functional_component_2.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { $, component$, useStore } from "@qwik.dev/core";
export const useCounter = () => {
  return useStore({ count: 0 });
};

export const STEP = 1;

export const App = component$((props) => {
  const state = useCounter();
  const thing = useStore({ thing: 0 });
  const STEP_2 = 2;

  const count2 = state.count * 2;
  return (
    <div onClick$={() => (state.count += count2)}>
      <span>{state.count}</span>
      {buttons.map((btn) => (
        <button onClick$={() => (state.count += btn.offset + thing + STEP + STEP_2 + props.step)}>
          {btn.name}
        </button>
      ))}
    </div>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_XXXXXXXXXXXX");
import { useStore } from "@qwik.dev/core";
export const useCounter = () => {
  return useStore({
    count: 0,
  });
};
export const STEP = 1;
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_XXXXXXXXXXXX"),
);

=== test.tsx_App_component_XXXXXXXXXXXX.js === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useCounter } from "./test";
import { useStore } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_div_button_q_e_click_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_div_q_e_click_XXXXXXXXXXXX");
export const App_component_XXXXXXXXXXXX = (props) => {
  const state = useCounter();
  const thing = useStore({
    thing: 0,
  });
  const count2 = state.count * 2;
  const App_component_div_button_q_e_click_XXXXXXXXXXXX = /* @__PURE__ */ qrl(
    i_XXXXXXXXXXXX,
    "App_component_div_button_q_e_click_XXXXXXXXXXXX",
    [props, state, thing],
  );
  return /* @__PURE__ */ _jsxSorted(
    "div",
    {
      "q-e:click": /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_div_q_e_click_XXXXXXXXXXXX", [
        count2,
        state,
      ]),
    },
    null,
    [
      /* @__PURE__ */ _jsxSorted("span", null, null, _wrapProp(state, "count"), 3, null),
      buttons.map((btn) =>
        /* @__PURE__ */ _jsxSorted(
          "button",
          {
            "q-e:click": App_component_div_button_q_e_click_XXXXXXXXXXXX,
            "q:p": btn,
          },
          null,
          _wrapProp(btn, "name"),
          0,
          "u6_0",
        ),
      ),
    ],
    0,
    "u6_1",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "props"
  ]
}
*/

=== test.tsx_App_component_div_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const App_component_div_q_e_click_XXXXXXXXXXXX = () => {
  const count2 = _captures[0],
    state = _captures[1];
  return (state.count += count2);
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_div_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component_div_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_div_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "App_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "count2",
    "state"
  ]
}
*/

=== test.tsx_App_component_div_button_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
import { STEP } from "./test";
export const App_component_div_button_q_e_click_XXXXXXXXXXXX = (_, _1, btn) => {
  const props = _captures[0],
    state = _captures[1],
    thing = _captures[2];
  return (state.count += btn.offset + thing + STEP + 2 + props.step);
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_div_button_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component_div_button_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_div_button_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "App_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "paramNames": [
    "_",
    "_",
    "btn"
  ],
  "captureNames": [
    "props",
    "state",
    "thing"
  ]
}
*/

=== DIAGNOSTICS ===

[]
