crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_immutable_function_components.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$, useStore, Slot } from "@qwik.dev/core";

export const App = component$((props: Stuff) => {
  return (
    <div>
      <Slot />
    </div>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { Slot } from "@qwik.dev/core";
const App_component_ckEPmXZlub0 = (props) => {
  return /* @__PURE__ */ _jsxSorted(
    "div",
    null,
    null,
    /* @__PURE__ */ _jsxSorted(Slot, null, null, null, 3, "u6_0"),
    1,
    "u6_1",
  );
};
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ inlinedQrl(App_component_ckEPmXZlub0, "App_component_ckEPmXZlub0"),
);

=== DIAGNOSTICS ===

[]
