crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_inlined_entry_strategy.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$, useBrowserVisibleTask$, useStore, useStyles$ } from "@qwik.dev/core";
import { thing } from "./sibling";
import mongodb from "mongodb";

export const Child = component$(() => {
  useStyles$("somestring");
  const state = useStore({
    count: 0,
  });

  // Double count watch
  useBrowserVisibleTask$(() => {
    state.count = thing.doStuff() + import("./sibling");
  });

  return <div onClick$={() => console.log(mongodb)}></div>;
});

=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { useStylesQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { useBrowserVisibleTaskQrl } from "@qwik.dev/core";
import { _captures } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
import { thing } from "./sibling";
import mongodb from "mongodb";
export const Child = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ inlinedQrl(() => {
    useStylesQrl(/* @__PURE__ */ inlinedQrl("somestring", "Child_component_useStyles_qBZTuFM0160"));
    const state = useStore({
      count: 0,
    });
    // Double count watch
    useBrowserVisibleTaskQrl(
      /* @__PURE__ */ inlinedQrl(
        () => {
          const state = _captures[0];
          state.count = thing.doStuff() + import("./sibling");
        },
        "Child_component_useBrowserVisibleTask_0IGFPOyJmQA",
        [state],
      ),
    );
    return (
      <div
        q-e:click={
          /* @__PURE__ */ inlinedQrl(
            () => console.log(mongodb),
            "Child_component_div_q_e_click_cROa4sult1s",
          )
        }
      ></div>
    );
  }, "Child_component_9GyF01GDKqw"),
);

=== DIAGNOSTICS ===

[]
